new contains are added in product details

--- a/Pages/add-to-cart.html
+++ b/Pages/add-to-cart.html
@@ -43,6 +43,9 @@
 
             <div class="col-8 product-div">
                 <h2 class="fs-4 fw-bold mx-2">Product Details</h2>
+                <div class="item me-3">
+                <span>0 items</span>
+                </div>
             </div>
 
             <div class="col-4 border-start">
