mq apply to the page

--- a/Pages/product-card.html
+++ b/Pages/product-card.html
@@ -53,7 +53,7 @@
         Enjoy our flavoursome <br/>range<br/> of gorgeous ice cream
     </p>  
     <div class="d-flex justify-content-center row">
-        <div class="col col-lg-2 col-md-1 col-sm-1 mt-5 img-fluid"><img  src="./../imgs/product-card/choco2.png" class="mx-5" id="choco2" alt="choco2"/> </div>
+        <div class="col col-lg-2 col-md-1 col-sm-1 mt-5 iceimg img-fluid"><img  src="./../imgs/product-card/choco2.png" class="mx-5" id="choco2" alt="choco2"/> </div>
        
      <div class="ice-des d-inline-block text-start fs-5 mt-4 col col-lg-2 col-md-1 col-sm-1"> 
         <h1 id="name">Cereal And Milk</h1> 
