--- a/Pages/about-us.html
+++ b/Pages/about-us.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="/css/about-us.css"/>
     <link rel="stylesheet" href="./../css/header.css">
     <link rel="stylesheet" href="./../css/footer1.css">
+    <link rel="stylesheet" href="./../css/header.css">
+        <script src="./../JS/header.js"></script>
+        <script src="./../JS/index.js"></script>
 </head>
 
 <body>
@@ -95,14 +98,14 @@
 We Are An Awesome Agency.
         </div>
     
-        <div class="pragraph-text mt-5 lh-lg col-sm-12"> 
+        <div class=" pragraph-text mt-5 lh-lg "> 
             <p> Indulge your senses in a world of frozen delights at Frosty Delights, where every scoop tells a story of creamy perfection and tantalizing flavors. Here, we craft ice cream that's not just a dessert but an experience, elevating the ordinary to extraordinary.
              Delight in guilt-free indulgence with our selection of vegan and dairy-free options, including Coconut Bliss, Almond Delight, and Raspberry Sorbet. Everyone deserves a taste of happiness!</p>
              For the daring palate, we offer flavors like Salted Caramel Swirl, Espresso Crunch, and Lavender Honey. Let your taste buds embark on an exciting journey with each spoonful. 
            </div>
 
            <div class="mt-4">
-            <a href="" class="color" > EXPLORE MORE </a>
+            <a href="./../Pages/product-card.html" class="color " > EXPLORE MORE </a>
         </div>
 
         <div  class="mt-5">
@@ -127,18 +130,18 @@ We Are An Awesome Agency.
             </video>
         </div>
 
-        <div class="d-flex">
+        <div class="d-flex ">
           <div class="mx-4 ext-start " >
               <h1 class="heading-font fs-1 fw-bolder mt-5 mb-3">Our Story</h1>
               <span class="color"> ━━━━━━━━━━    </span> &nbsp;&nbsp;&nbsp;&nbsp;
              <span class="pragraph-text"> Creamy Desert</span>
-             <p class="pragraph-text lh-lg fs-6 my-5">
+             <p class="pragraph-text lh-lg fs-6 my-5 paragraph">
               Welcome to Creamy Desert, where every scoop tells a story! Our journey began with a simple desire to create moments of joy and indulgence through the timeless pleasure of ice cream. Nestled in the heart of our customer, our cozy shop invites you to embark on a delightful adventure of flavors and fun.
               
-           <p class="pragraph-text lh-lg fs-6 my-5">  At Creamy Desert, we believe that great ice cream starts with the finest ingredients and a dash of imagination. Each scoop is crafted with love and attention to detail, ensuring a creamy, decadent experience with every bite. </p>
+           <p class="pragraph-text lh-lg fs-6 my-5 paragraph col-sm-12">  At Creamy Desert, we believe that great ice cream starts with the finest ingredients and a dash of imagination. Each scoop is crafted with love and attention to detail, ensuring a creamy, decadent experience with every bite. </p>
         </div>
         <div >
-          <img src="/imgs/about-page-img/stawberry-icecream.png" class="paragraph-img m-5 pt-5"/>
+          <img src="/imgs/about-page-img/stawberry-icecream.png" class="paragraph-img m-5 pt-5 img col-sm-12"/>
         </div>
         </div>
 
@@ -176,8 +179,7 @@ We Are An Awesome Agency.
     <p class="fs-4 p-3"> Natural and Fresh Ingredients </p></div>
 
     <div class="d-flex m-4  pragraph-text " > <img src="./../icons/about-us/img/ice-cream.png" class="icon"/>  
-    <p class="fs-4 p-3">Balanced Sweetness</p>
-    </div>
+    <p class="fs-4 p-3">Balanced Sweetness</p> </div>
  </div>
 </div>
 
