new changes are added

--- a/Pages/add-to-cart.html
+++ b/Pages/add-to-cart.html
@@ -45,6 +45,14 @@
                 <h2 class="fs-4 fw-bold mx-2">Product Details</h2>
                 <div class="item me-3">
                 <span>0 items</span>
+                <div>
+                    <div>
+                        <img/>
+                        <h3>title</h3>
+    
+                    </div>
+                    <div></div>
+                </div>
                 </div>
             </div>
 
