giving link of menupage js file in menu page html file

--- a/Pages/menu-page.html
+++ b/Pages/menu-page.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./../css/header.css">
   <script src="./../JS/header.js"></script>
   <script src="./../JS/index.js"></script>
+  <script src="./../JS/menu-page.js"></script>
 </head>
 <body style="background-color: #fffffb;">
     <div class="nav-container-main1 flex-display" >
@@ -463,3 +464,14 @@
   <script src="https://kit.fontawesome.com/029a190c6b.js" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
