--- a/Pages/buy-now.html
+++ b/Pages/buy-now.html
@@ -8,10 +8,72 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="./../css/buy-now.css">
-  <link rel="stylesheet" href="./../css/footer1.css">
+  <link rel="stylesheet" href="./../css/footer.css">
+  <link rel="stylesheet" href="./../css/header.css">
+  <script src="./../JS/header.js"></script>
 </head>
 
 <body>
+  <div class="nav-container-main1 flex-display">
+    <div class="right-flex flex-display">
+        <img src="./imgs/menu.png" height="40px" class="hamburger-img-nav" onclick="openNav()" alt="">
+        <a href="./index.html"> <img src="./../imgs/logo.png" class="navigationbar-logo" alt=""></a>
+    </div>
+    <div class="mid-flex">
+        <ul class="menu-list flex-display" type="none">
+            <li><a href="./../index.html">Home</a></li>
+            <li><a href="./../Pages/about-us.html">About Us</a></li>
+            <li><a href="./../Pages/contact-page.html">Contact Us</a></li>
+            <li><a href="./../Pages/services.html">Services</a></li>
+        </ul>
+    </div>
+    <div class="left-flex">
+        <img src="./../icons/magnifying-glass.png" class="nav-icons" alt="" onclick="openSearch()">
+        <a href="./../Pages/login-page.html"><img src="./../icons/add-contact.png" class="nav-icons login-icon"
+                alt=""></a>
+        <a href="./../Pages/review-page.html"><img src="./../icons/heart.png" class="nav-icons  heart-icon" alt=""></a>
+        <a href="./../Pages/add-to-cart.html"><img src="./../icons/shopping-bag.png" class="nav-icons" alt=""
+                onclick="openCarts()"></a>
+    </div>
+</div>
+<header>
+
+    <div id="myOverlay" class="overlay">
+        <span class="closebtn" onclick="closeSearch()" title="Close Search">x</span><br><br><br>
+        <h1 class="search-title">Search Your Favorite Ice-Cream </h1>
+        <h2 class="search-title">And Hit Enter...</h2>
+        <div class="overlay-content">
+            <form>
+                <input type="text" placeholder="Search Your Favorite Ice-Cream Here..." name="search">
+            </form>
+        </div>
+    </div>
+    <!-- <div id="mySidenav1" class="sidenav1">
+        <a href="javascript:void(0)" class="closebtn1" onclick="closeNavs()">&times;</a>
+        <p class="cart1">Shopping Cart</p>
+        <hr>
+    </div> -->
+
+   
+    <div class="slide-btn-comtain" onclick="changeBg()">
+        <img src="./../icons/new-moon.png" alt="" class="slide-btn" id="slide-btn"
+            onclick="changeSlideBtn('./imgs/s5.jpg')">
+        <img src="./../icons/oval.png" alt="" class="slide-btn btn-2" id="slide-btn1"
+            onclick="changeSlideBtn('./../imgs/s6.jpg')">
+    </div>
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <ul class="menu-list" type="none">
+            <li><a href="./../index.html">Home</a></li>
+            <li><a href="./../Pages/about-us.html">About Us</a></li>
+            <li><a href="./../Pages/contact-page.html">Contact Us</a></li>
+            <li><a href="./../Pages/services.html">Services</a></li>
+        </ul>
+    </div>
+
+
+</header>
+  
 
   <div class="mb-5">
     <div class="container">
@@ -134,82 +196,84 @@
       </div>
     </div>
   </div>
+  
+  <footer class="main">
 
-  <footer>
-    <div class="flex footer-cont">
-        <div>
-            <img src="./../imgs/logo1.png" alt="" id="footer-logo">
-            <h4 class="slogun">
-                "Scoops of joy, frozen delight,<br>
-                Taste the magic, day or night!"</h4>
-            <div class="footer mt-4">&nbsp;&nbsp;<a href="https://www.instagram.com/bhushan_potdar_19"
-                    onclick="return ready()" class="b" target="_blank"><i
-                        class="fa-brands fa-instagram fa-brand"></i></a>&emsp;<a
-                    href="https://www.linkedin.com/in/bhushan-potdar-62283a2a7/" onclick="return ready()" class="a"
-                    target="_blank"><i class="fa-brands fa-linkedin fa-brand"></i></a>&emsp;<a
-                    href="https://wa.me/7744049590" onclick="return ready()" class="b" target="_blank"><i
-                        class="fa-brands fa-whatsapp fa-brand"></i></a>
-                &emsp;<a href="https://github.com/bhushanpotdar19" onclick="return ready()" class="b"
-                    target="_blank"><i class="fa-brands fa-github fa-brand"></i></a></div>
-            <br>
+    <div class="foot ">Quick Links
+        <hr>
+
+        <div class="footer"><i class="fa-solid fa-house fa-sol"></i>&nbsp;&nbsp;<a href="./../index.html"
+                class="b">Home</a>
+        </div>
+        <div class="footer "><i class="fa-solid fa-gear fa-sol"></i>&nbsp;&nbsp;<a href="./../Pages/services.html"
+                class="b">Services
+            </a></div>
+        <div class="footer "><i class="fa-solid fa-list fa-sol"></i>&nbsp;&nbsp;&nbsp;<a href="./../Pages/menu-page.html"
+                class="b">Menu</a></div>
+        <div class="footer "><i class="fa-solid fa-cart-shopping fa-sol"></i>&nbsp;&nbsp;<a href="./../Pages/product-card.html"
+                class="b">Store</a></div>
+        <div class="footer "><i class="fa-solid fa-file-pen fa-sol"></i>&nbsp;&nbsp;<a href="./../Pages/registration.html"
+                class="b">Registration</a></div>
+        <div class="footer "><i class="fa-solid fa-thumbs-up fa-sol"></i>&nbsp;&nbsp;<a href="./../Pages/review-page.html"
+                class="b">Review</a></div>
+        <div class="footer "><i class="fa-solid fa-user fa-sol"></i>&nbsp;&nbsp;<a href="./../Pages/about-us.html"
+                class="b">About Us</a></div>
 
 
-
-        </div>
-        <div class="quick-links">
-            <UL type="none">
-                <li>Quick Links</li>
-                <hr>
-                <li>
-                    <ul type="none">
-                        <li><a href="./../index.html">Home</a></li>
-                        <li><a href="./../Pages/about-us.html">About Us</a></li>
-                        <li><a href="./../Pages/contact-page.html">Contact Us</a></li>
-                        <li><a href="./../Pages/services.html">Services</a></li>
-                        <li><a href="./../Pages/menu-page.html">Menu Card</a></li>
-                        <li><a href="./../Pages/buy-now.html">buy-now</a></li>
-                    </ul>
-                </li>
-            </UL>
-        </div>
-        <div class="quick-links1">
-            <UL type="none">
-                <li>Help & Information</li>
-                <hr>
-                <li>
-                    <ul type="none">
-                        <li><a href="">Privacy Policy</a></li>
-                        <li><a href="">Terms & Conditions</a></li>
-                        <li><a href="">Product Return</a></li>
-                        <li><a href="">Wholesale Policy</a></li>
-                        <li><a href="">Help Center</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-        <div class="quick-links1">
-            <UL type="none">
-                <li>Contact Us</li>
-                <hr>
-                <li>
-                    <ul type="none">
-                        <li class="slogun1">1/2, Rachik House, <br> Yeolekar, College Road, <br> Nashik, Maharashtra
-                        </li>
-                        <li><a href="">0253 230 5411</a></li>
-                        <li><a href="" target="mailto">creamydesert@gmail.com</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
     </div>
-    <hr class="hr">
-    <p id="copyright" style="text-align:center;">Copyright @ Creamy Desert | All Rights Reserved.</p>
-    <img src="./../icons/logoo-removebg-preview.png" class="visa-image" alt="">
-</footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
 
+
+    <div class="contact1">Contact Us
+        <hr>
+        <div class="footer"><i class="fa-solid fa-phone-volume fa-sol"></i>&nbsp;&nbsp;<a href="tel:7744049590"
+                class="b">+91 7744049590</a></div>
+        <div class="footer "><i class="fa-solid fa-envelope fa-sol"></i>&nbsp;&nbsp;<a
+                href="mailto: bhushanpotdar3@gmail.com" class="bb"> bhushanpotdar3@gmail.com</a></div>
+
+        <div class="footer mt-4">&nbsp;&nbsp;<a href="https://www.instagram.com/bhushan_potdar_19" onclick="return ready()" class="a"
+                target="_blank"><i class="fa-brands fa-instagram fa-brand"></i></a>&emsp;<a
+                href="https://www.linkedin.com/in/bhushan-potdar-62283a2a7/" onclick="return ready()" class="a" target="_blank"><i
+                    class="fa-brands fa-linkedin fa-brand"></i></a>&emsp;<a href="https://wa.me/7744049590" onclick="return ready()"
+                class="a" target="_blank"><i class="fa-brands fa-whatsapp fa-brand"></i></a>
+            &emsp;<a href="https://github.com/bhushanpotdar19" onclick="return ready()" class="a" target="_blank"><i
+                    class="fa-brands fa-github fa-brand"></i></a></div>
+        <br>
+
+    </div>
+    <div class="location">Location
+        <hr>
+        <div class="footer"><i class="fa-solid fa-location-dot fa-sol"></i></i>&nbsp;&nbsp;<a
+                href="https://maps.app.goo.gl/TCA1th79iKR1wiRE9" class="b">107,
+                Deur BK, Tal-Dhule, <br>Dist-Dhule -424302
+            </a></div>
+        <div class="footer "><iframe class="mapl"
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d777.7157158970201!2d74.4609393!3d20.9038021!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bdeef04875b6c27%3A0xb9b55ff007fa15d1!2sWF36%2BGHV%2C%20Deur%20Budruk%2C%20Maharashtra%20424302!5e1!3m2!1sen!2sin!4v1712915607325!5m2!1sen!2sin"
+                width="280" height="170" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+
+    </div>
+
+</footer>
+<center style="background-color: rgb(32, 31, 31); margin-bottom:0%; padding:0%; color:white ">Copyright &copy 2024
+    All
+    Rights Reserved by RTC.</center>
+
+<script src="https://kit.fontawesome.com/0dcf08ad5b.js" crossorigin="anonymous"></script>
+
+
+<script>
+    function ready() {
+        let confValue = confirm("Are You Sure? You want to move to another page!")
+        if (confValue == true) {
+            return true
+
+        }
+        else {
+            return false
+        }
+    }
+    </script>
   </body>
   </html>
 
