--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="nav-container-main1 flex-display">
         <div class="right-flex flex-display">
             <img src="./imgs/menu.png" height="40px" class="hamburger-img-nav" onclick="openNav()" alt="">
-            <a href="./index.html"> <img src="./imgs/logo.png" class="navigationbar-logo" alt=""></a>
+            <a href="./index.html"> <img src="./imgs/logo1.png" class="navigationbar-logo" alt=""></a>
         </div>
         <div class="mid-flex">
             <ul class="menu-list flex-display" type="none">
