--- a/pages/services.html
+++ b/pages/services.html
@@ -112,7 +112,7 @@
     <div class="nav-container-main1 flex-display">
         <div class="right-flex flex-display">
             <img src="./../imgs/menu.png" height="40px" class="hamburger-img-nav" onclick="openNav()" alt="">
-            <a href="./../index.html"> <img src="./../imgs/logo.png" class="navigationbar-logo" alt=""></a>
+            <a href="./../index.html"> <img src="./../imgs/logo1.png" class="navigationbar-logo" alt=""></a>
         </div>
         <div class="mid-flex">
             <ul class="menu-list flex-display" type="none">
@@ -124,7 +124,7 @@
         </div>
         <div class="left-flex">
             <img src="./../icons/magnifying-glass.png" class="nav-icons" alt="" onclick="openSearch()">
-            <a href="./../Pages/login-page.html"><img src="./icons/add-contact.png" class="nav-icons login-icon"
+            <a href="./../Pages/login-page.html"><img src="./../icons/add-contact.png" class="nav-icons login-icon"
                     alt=""></a>
             <a href="./../Pages/review-page.html"><img src="./../icons/heart.png" class="nav-icons  heart-icon"
                     alt=""></a>
