--- a/Pages/product-card.html
+++ b/Pages/product-card.html
@@ -25,7 +25,7 @@
         <div class="nav-container-main1 flex-display">
             <div class="right-flex flex-display">
                 <img src="./../imgs/menu.png" height="40px" class="hamburger-img-nav" onclick="openNav()" alt="">
-                <a href="./index.html"> <img src="./../imgs/logo.png" class="navigationbar-logo" alt=""></a>
+                <a href="./index.html"> <img src="./../imgs/logo1.png" class="navigationbar-logo" alt=""></a>
             </div>
             <div class="mid-flex">
                 <ul class="menu-list flex-display" type="none">
@@ -340,6 +340,25 @@ No products are available.
     </div>
 
 </footer>
+<center style="background-color: rgb(32, 31, 31); margin-bottom:0%; padding:0%; color:white ">Copyright &copy 2024
+    All
+    Rights Reserved by RTC.</center>
+
+<script src="https://kit.fontawesome.com/0dcf08ad5b.js" crossorigin="anonymous"></script>
+
+
+<script>
+    function ready() {
+        let confValue = confirm("Are You Sure? You want to move to another page!")
+        if (confValue == true) {
+            return true
+
+        }
+        else {
+            return false
+        }
+    }
+    </script>
    <!--footer ends-->
 
    
