--- a/Pages/review-page.html
+++ b/Pages/review-page.html
@@ -93,7 +93,7 @@
             <textarea name="Message" rows="4" placeholder="Write Your Review" required
               class="p-3 rounded border border-black" id="input-Msg"></textarea>
             <div class="mt-4 mb-4">
-              <button type="button" class="px-4 py-2 rounded bod" onclick="cancelReview()">&nbsp; Cancel &nbsp;</button>
+              <button type="button" class="px-4 py-2 rounded" onclick="cancelReview()">&nbsp; Cancel &nbsp;</button>
               <button type="button" class="px-5 py-2 rounded border bag" onclick="addReview()">Post</button>
             </div>
           </div>
@@ -101,11 +101,11 @@
       </div>
     </div>
   </div>
-  <div class="p-5 c-bag">
+  <div class="p-5">
     <div class="container">
       <h1 class="text-center mb-4">WHAT PEOPLE SAY</h1>
       <div class="row">
-        <div class="r-bag d-flex flex-wrap justify-content-evenly p-md-4" id="review-Box">
+        <div class=" d-flex flex-wrap justify-content-evenly p-md-4" id="review-Box">
         </div>
       </div>
     </div>
